--- a/catalog/templates/catalog/base.html
+++ b/catalog/templates/catalog/base.html
@@ -9,18 +9,18 @@
 </head>
 
 <body> 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container-fluid">
-            <h2>Local Library</h2>
+            <a class="navbar-brand" href="{% url 'catalog:index' %}">Local Library</a>
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="{% url 'catalog:index' %}">Home</a>
+                    <a class="nav-link" aria-current="page" href="{% url 'catalog:index' %}">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'catalog:authors_list' %}">Authors</a>
+                    <a class="nav-link" href="{% url 'catalog:author_list' %}">Authors</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'catalog:books_list' %}">Books</a>
+                    <a class="nav-link" href="{% url 'catalog:book_list' %}">Books</a>
                 </li>
                 <form class="d-flex" action="get">
                     {% csrf_token %}
