--- a/catalog/templates/catalog/base.html
+++ b/catalog/templates/catalog/base.html
@@ -24,8 +24,8 @@
                 </li>
                 <form class="d-flex" action="get">
                     {% csrf_token %}
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="search" style="margin-top: 4px;">
+                    <button class="btn btn-outline-success" type="submit" style="margin-top: 4px;">Search</button>
                 </form>
             </ul>
         </div>
@@ -34,6 +34,27 @@
 {% block content %}  
 
 {% endblock content %}
+
+{% block pagination %}
+      
+      {% if is_paginated %}
+        <div class="pagination">
+            <span class="page-links">
+                {% if page_obj.has_previous %}
+                    <a href="{{ request.path }}?page={{ page_obj.previous_page_number }}">previous</a>
+                {% endif %}
+                <span class="current_page">
+                    Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}
+                </span>
+                {% if page_obj.has_next %}
+                    <a href="{{ request.path }}?page?={{ page_obj.next_page_number }}">next</a>
+                {% endif %}
+            </span>
+        </div>
+      {% endif %}
+      
+{% endblock pagination %}
+    
 
 </body>
 </html>
