--- a/catalog/templates/catalog/index.html
+++ b/catalog/templates/catalog/index.html
@@ -21,5 +21,13 @@
   </ul>
 </div>
 
+<div class="fixed-bottom" style="margin-bottom: 10px; margin-left: 10px;">
+  <footer class="mt-auto">
+    <div class="inner">
+      Views: {{ num_visits }} | Powered by: <a href="https://developer.mozilla.org/en-US/docs/Learn/Server-side/Django">Mozilla</a>, <a href="https://docs.djangoproject.com/en/3.2/">Django</a>, <a href="https://github.com/swford89">swford</a>
+    </div>
+  </footer>
+</div>
+
 {% endblock content %}
     
