--- a/catalog/templates/catalog/base.html
+++ b/catalog/templates/catalog/base.html
@@ -14,6 +14,9 @@
             <a class="navbar-brand" href="{% url 'catalog:index' %}">Local Library</a>
             <ul class="navbar-nav">
                 <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="{% url 'login' %}">Login</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" aria-current="page" href="{% url 'catalog:index' %}">Home</a>
                 </li>
                 <li class="nav-item">
