--- a/templates/registration/logged_out.html
+++ b/templates/registration/logged_out.html
@@ -2,13 +2,15 @@
 
 {% block content %}
 
-<br>    
-<div class="card justify-content-center" style="margin-left: 400px; margin-right: 400px;">
-    <article class="card-body">
-        <h4 class="card-title text-center mb-4 mt-1">Logged Out</h4>
-        <hr>
-        <p class="text-success text-center">See you around!</p>
-    </article>
-</div>
+<br>
+<div class="container">   
+    <div class="card justify-content-center" style="margin-left: 400px; margin-right: 400px;">
+        <article class="card-body">
+            <h4 class="card-title text-center mb-4 mt-1">Logged Out</h4>
+            <hr>
+            <p class="text-success text-center">See you around!</p>
+        </article>
+    </div>
+</div> 
 
 {% endblock content %}
