--- a/templates/registration/password_reset_complete.html
+++ b/templates/registration/password_reset_complete.html
@@ -1,8 +1,17 @@
 {% extends 'catalog/base.html' %}
 
 {% block content %}
-    
-<h1>The password has been changed!</h1>
-<p><a href="{% url 'login' %}">log in again?</a></p>
+
+<br>
+<div class="container">   
+    <div class="card justify-content-center" style="margin-left: 400px; margin-right: 400px;">
+        <article class="card-body">
+            <h4 class="card-title text-center mb-4 mt-1">Reset Complete</h4>
+            <hr>
+            <p class="text-success text-center">You have successfully changed your password</p>
+            <p class="card-text"><a href="{% url 'login' %}">Log in again?</a></p>
+        </article>
+    </div>
+</div> 
 
 {% endblock content %}
