--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -18,7 +18,7 @@
                 <hr>
                 <p class="text-success text-center">Enter your email for reset instructions</p>
 
-                <form action="{% url 'login' %}" method="post">
+                <form action="{% url 'password_reset_done' %}" method="post">
                     {% csrf_token %}
                     <div class="form-group">
                         <div class="input-group">
