--- a/catalog/templates/catalog/base.html
+++ b/catalog/templates/catalog/base.html
@@ -14,9 +14,6 @@
             <a class="navbar-brand" href="{% url 'catalog:index' %}">Local Library</a>
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="{% url 'login' %}">Login</a>
-                </li>
-                <li class="nav-item">
                     <a class="nav-link" aria-current="page" href="{% url 'catalog:index' %}">Home</a>
                 </li>
                 <li class="nav-item">
@@ -31,6 +28,17 @@
                     <button class="btn btn-outline-success" type="submit" style="margin-top: 4px;">Search</button>
                 </form>
             </ul>
+            
+            <ul class="navbar-nav justify-content-right">
+                <li class="nav-item">
+                {% if user.is_authenticated %}
+                    <li><a class="nav-link" href="{% url 'logout' %}">Logout</a></li>
+                {% else %}
+                    <a class="nav-link" aria-current="page" href="{% url 'login' %}">Login</a>
+            {% endif %}
+                </li>
+            </ul>
+                
         </div>
       </nav>
 
