removed unnecessary html attributes

--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -3,13 +3,6 @@
 
 {% block content %}
 
-    {% if form.email.errors %}
-        
-        {{ form.email.errors }}
-
-    {% endif %}
-        
-
     <br>
     <div class="container">
         <div class="card justify-content-center" style="margin-left: 400px; margin-right: 400px;">
@@ -18,8 +11,13 @@
                 <hr>
                 <p class="text-success text-center">Enter your email for reset instructions</p>
 
-                <form action="{% url 'password_reset_done' %}" method="post">
+                <form action="{% url 'password_reset_done' %}" method="post" id="password-reset-form">
                     {% csrf_token %}
+                    {% if form.email.errors %}
+
+                        {{ form.email.errors }}
+
+                    {% endif %}  
                     <div class="form-group">
                         <div class="input-group">
                             <div class="input-group-prepend">
@@ -31,7 +29,8 @@
                                     </i>
                                 </span>
                             </div>
-                            <input class="form-control" placeholder="Email" type="email">
+                            
+                            <p>{{ form.email }}</p>
                         </div>
                         <!--input group//-->
                     </div>
