--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -27,7 +27,7 @@
                 <h4 class="card-title text-center mb-4 mt-1">Sign in</h4>
                 <hr>
                 <p class="text-success text-center">Enter your email and password</p>
-                <form action="{% url 'login' %}" method="post" id="login-form">
+                <form action="{% url 'login' %}" method="post">
                     {% csrf_token %}
                     <div class="form-group">
                         <div class="input-group">
@@ -40,7 +40,7 @@
                                     </i>
                                 </span>
                             </div>
-                            <input class="form-control" placeholder="username" type="text" name="username" required id="id_username"> 
+                            <input class="form-control" placeholder="username" type="text" name="username"> 
                         </div>
                         <!--input group//-->
                     </div>
@@ -59,7 +59,7 @@
                                     </i>
                                 </span>
                             </div>
-                            <input class="form-control" placeholder="*******" name="password" type="password" required id="id_password">
+                            <input class="form-control" placeholder="*******" name="password" type="password">
                         </div>
                         <!--input group//-->
                     </div>
