--- a/catalog/templates/catalog/base.html
+++ b/catalog/templates/catalog/base.html
@@ -32,7 +32,7 @@
             <ul class="navbar-nav justify-content-right">
                 {% if user.is_authenticated %}
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">You</a>
+                        <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">{{ user.username }}</a>
                         <ul class="dropdown-menu" style="right: 0; left: auto;">
                             <li><a class="dropdown-item" href="{% url 'catalog:my_borrowed' %}">mybooks</a></li>
                             <li><a class="dropdown-item" href="{% url 'logout' %}">Logout</a></li>
