--- a/catalog/templates/catalog/base.html
+++ b/catalog/templates/catalog/base.html
@@ -34,8 +34,21 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">{{ user.username }}</a>
                         <ul class="dropdown-menu" style="right: 0; left: auto;">
-                            <li><a class="dropdown-item" href="{% url 'catalog:my_borrowed' %}">mybooks</a></li>
+                            
+                            {% if user.is_staff %}
+                                
+                            <li><a class="dropdown-item" href="{% url 'catalog:all_borrowed' %}">allborrowed</a></li>
+                            <li><hr class="dropdown-divider"></li>
                             <li><a class="dropdown-item" href="{% url 'logout' %}">Logout</a></li>
+
+                            {% else %}
+                                
+                            <li><a class="dropdown-item" href="{% url 'catalog:my_borrowed' %}">mybooks</a></li>
+                            <li><hr class="dropdown-divider"></li>
+                            <li><a class="dropdown-item" href="{% url 'logout' %}">Logout</a></li>
+
+                            {% endif %}
+
                         </ul>
                     </li>
                     
