formatted list display with html cards

--- a/catalog/templates/catalog/bookinstance_list_borrowed_user.html
+++ b/catalog/templates/catalog/bookinstance_list_borrowed_user.html
@@ -9,8 +9,34 @@
                 <h2 class="card-title">Borrowed Books</h2>
                 
                 {% for book_instance in bookinstance_list %}
+
                     
-                    <li class="card-text">{{ book_instance }}</li>
+                    {% if book_instance.is_overdue %}
+                        <div class="container-fluid">
+                            <div class="card-body">
+                                <h4 class="card-title text-muted">{{ book_instance.book }}</h4>
+                                <li class="card-text"><strong>ID: </strong>{{ book_instance.id }}</li>
+                                <li class="card-text"><strong>DUE DATE: </strong> OVERDUE. Was due back on: <strong class="text-danger">{{ book_instance.due_back }}</strong></li>
+                            </div>
+                        </div>
+
+                    {% else %}
+
+                        <div class="container-fluid">
+                            <div class="card-body">
+                                <h4 class="card-title text-muted">{{ book_instance.book }}</h4>
+                                <li class="card-text"><strong>ID: </strong>{{ book_instance.id }}</li>
+                                
+                                {% if book_instance.status == "o" %}
+                                    
+                                    <li class="card-text"><strong>DUE DATE: </strong> Please return by: <strong class="text-warning">{{ book_instance.due_back }}</strong></li>
+
+                                {% endif %}
+                                    
+                            </div>
+                        </div>
+
+                    {% endif %}
 
                 {% endfor %}
                     
