--- a/catalog/templates/catalog/search.html
+++ b/catalog/templates/catalog/search.html
@@ -4,21 +4,26 @@
     
     {% if books %}
         <br>
-        <div class="containter-fluid" style="margin-left: 12px;">
-            <h5>Book Results:</h5>
-            {% for book in books %}
-                <li><a href="{% url 'catalog:book_detail' book.id %}">{{ book }}</a></li>
-            {% endfor %}        
+        <div class="containter-fluid">
+            <div class="card-body">
+                <h5 class="card-title">Book Results:</h5>
+                {% for book in books %}
+                    <li class="card-text"><a href="{% url 'catalog:book_detail' book.id %}">{{ book }}</a></li>
+                {% endfor %}  
+            </div>      
         </div>
 
     {% elif authors %}
         <br>
-        <div class="container-fluid" style="margin-left: 12px;">
-            <h5>Author Results:</h5>
-            {% for author in authors %}
-                <li><a href="{% url 'catalog:author_detail' author.id %}">{{ author }}</a></li>
-            {% endfor %}
-        </div>    
+        <div class="container-fluid">
+            <div class="card-body">
+                <h5 class="card-title">Author Results:</h5>
+                {% for author in authors %}
+                    <li class="card-text"><a href="{% url 'catalog:author_detail' author.id %}">{{ author }}</a></li>
+                {% endfor %}
+            </div>
+        </div>   
+
     {% else %}
         <div class="alert alert-warning" role="alert">
             Uh oh -- that either doesn't exist in our database, or there is a spelling error.
