--- a/catalog/templates/catalog/book_renew_librarian.html
+++ b/catalog/templates/catalog/book_renew_librarian.html
@@ -5,16 +5,16 @@
 
     <div class="container-fluid">
         <div class="card-body">
-            <h4 class="card-title">Renew Book: {{ book_instance.title }}</h4>
-            <p class="card-text"><strong>USER: {{ book_instance.borrower }}</strong></p>
+            <h4 class="card-title">Renew Book: {{ book_instance.book }}</h4>
+            <li class="card-text"><strong>USER: </strong>{{ book_instance.borrower }}</li>
             
             {% if book_instance.is_overdue %}
                 
-                <p class="card-text">OVERDUE: Was due back on <strong class="text-danger">{{ book_instance.due_back }}</strong></p>
+                <li class="card-text"><strong>OVERDUE: </strong>Was due back on <strong class="text-danger">{{ book_instance.due_back }}</strong></li>
 
             {% else %}
 
-                <p class="card-text">DUE BACK: <strong class="text-warning">{{ book_instance.due_back }}</strong></p>
+                <li class="card-text"><strong> DUE BACK: </strong><strong class="text-warning">{{ book_instance.due_back }}</strong></li>
 
             {% endif %}
 
