formatted templates; created delete author form, update/create author form

--- a/catalog/templates/catalog/author_detail.html
+++ b/catalog/templates/catalog/author_detail.html
@@ -4,7 +4,7 @@
 {% block content %}
     
 <div class="card" style="margin-left: 20px; margin-top: 20px; margin-right: 20px;">
-    <div class="card-body">
+    <div class="card-header">
       <h2 class="card-title">{{ author }}</h2>
       <h6 class="card-subtitle mb-2 text-muted">{{ author.date_of_birth }} - {{ author.date_of_death }}</h6>
       
@@ -17,12 +17,10 @@
         <a href="https://en.wikipedia.org/wiki/{{ author.first_name }}_{{ author.last_name }}">Wiki Link</a>
 
       {% endif %}
-    </div>
-  </div>
 
-<div class="card" style="margin-left: 20px; margin-top: 20px; margin-right: 20px;">
+    </div>
     <div class="card-body">
-      <h2 class="card-title">Books</h2>
+      <h4 class="card-title">Books</h4>
       <h6 class="card-subtitle mb-2 text-muted">What we have</h6>
       
       {% for book in author.book_set.all %}
