--- a/catalog/templates/catalog/bookinstance_list_borrowed_admin.html
+++ b/catalog/templates/catalog/bookinstance_list_borrowed_admin.html
@@ -36,7 +36,7 @@
                                     
                                     {% if book_instance.status == "o" %}
                                         
-                                        <li class="card-text"><strong>DUE DATE: </strong> Please return by: <strong class="text-warning">{{ book_instance.due_back }}</strong></li>
+                                        <li class="card-text"><strong>DUE DATE: </strong><strong class="text-warning">{{ book_instance.due_back }}</strong></li>
                                         <br>
                                         <a class="btn btn-primary btn-block" href="{% url 'catalog:renew_book_librarian' book_instance.id %}">Renew</a>
 
