--- a/catalog/templates/catalog/book_list.html
+++ b/catalog/templates/catalog/book_list.html
@@ -7,13 +7,29 @@
         
         <br>    
         <div class="container-fluid"> 
-            <div class="card-body">
-                <h5 class="card-title">Book List:</h5> 
-                {% for book in book_list %}
-                    <li class="card-text"><a href="{% url 'catalog:book_detail' book.id %}">{{ book.title }}</a></li> 
-                {% endfor %}
-            </div>
+            <section>
+                <div class="card-body">
+                    <h5 class="card-title">Book List:</h5> 
+                    {% for book in book_list %}
+                        <li class="card-text"><a href="{% url 'catalog:book_detail' book.id %}">{{ book.title }}</a></li> 
+                    {% endfor %}
+                </div>
+            </section>
         </div>
+
+    
+    {% if user.is_superuser %}
+        
+        <br>
+        <div class="container-fluid">
+            <aside>
+                <ul class="nav justify-content-right">
+                    <a class="btn btn-primary" href="{% url 'catalog:book_create' %}">Create Book</a>
+                </ul>
+            </aside>
+        </div>
+
+    {% endif %}
 
     {% else %}
 
