--- a/catalog/templates/catalog/base.html
+++ b/catalog/templates/catalog/base.html
@@ -57,7 +57,7 @@
                 </li>
                 {% endif %}
             </ul>
-                
+
         </div>
       </nav>
 
@@ -65,10 +65,10 @@
 
 {% endblock content %}
 
-{% block pagination %}
-      
+{% block pagination %} 
       {% if is_paginated %}
-        <div class="pagination">
+        <br>
+        <div class="pagination justify-content-center">
             <span class="page-links">
                 {% if page_obj.has_previous %}
                     <a href="{{ request.path }}?page={{ page_obj.previous_page_number }}">previous</a>
@@ -77,12 +77,11 @@
                     Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}
                 </span>
                 {% if page_obj.has_next %}
-                    <a href="{{ request.path }}?page?={{ page_obj.next_page_number }}">next</a>
+                    <a href="{{ request.path }}?page={{ page_obj.next_page_number }}">next</a>
                 {% endif %}
             </span>
         </div>
-      {% endif %}
-      
+      {% endif %}  
 {% endblock pagination %}
     
 
