changed to form input; formatted card size

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -22,7 +22,7 @@
 
     <br>
     <div class="container" role="main">
-        <div class="card justify-content-center" style="margin-left: 400px; margin-right: 400px;">
+        <div class="card justify-content-center" style="margin-left: 450px; margin-right: 450px;">
             <article class="card-body">
                 <h4 class="card-title text-center mb-4 mt-1">Sign in</h4>
                 <hr>
@@ -40,7 +40,7 @@
                                     </i>
                                 </span>
                             </div>
-                            <input class="form-control" placeholder="username" type="text" name="username"> 
+                            {{ form.username }} 
                         </div>
                         <!--input group//-->
                     </div>
@@ -59,7 +59,7 @@
                                     </i>
                                 </span>
                             </div>
-                            <input class="form-control" placeholder="*******" name="password" type="password">
+                            {{ form.password }}
                         </div>
                         <!--input group//-->
                     </div>
