--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -5,13 +5,13 @@
 
     <br>
     <div class="container">
-        <div class="card justify-content-center" style="margin-left: 400px; margin-right: 400px;">
+        <div class="card justify-content-center" style="margin-left: 450px; margin-right: 450px;">
             <article class="card-body">
                 <h4 class="card-title text-center mb-4 mt-1">Password Reset</h4>
                 <hr>
                 <p class="text-success text-center">Enter your email for reset instructions</p>
 
-                <form action="{% url 'password_reset_done' %}" method="post" id="password-reset-form">
+                <form action="" method="post" id="password-reset-form">
                     {% csrf_token %}
                     {% if form.email.errors %}
 
@@ -29,8 +29,7 @@
                                     </i>
                                 </span>
                             </div>
-                            
-                            <p>{{ form.email }}</p>
+                            {{ form.email }}
                         </div>
                         <!--input group//-->
                     </div>
