--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -26,7 +26,7 @@
             <article class="card-body">
                 <h4 class="card-title text-center mb-4 mt-1">Sign in</h4>
                 <hr>
-                <p class="text-success text-center">Enter your email and password</p>
+                <p class="text-success text-center">Enter your username and password</p>
                 <form action="{% url 'login' %}" method="post">
                     {% csrf_token %}
                     <div class="form-group">
