--- a/templates/registration/password_reset_email.html
+++ b/templates/registration/password_reset_email.html
@@ -1,18 +1,4 @@
-{% extends 'catalog/base.html' %}
+Reset Instructions:
 
-{% block content %}
-    
-<br>
-<div class="container">   
-    <div class="card justify-content-center" style="margin-left: 10px;">
-        <article class="card-body">
-            <h4 class="card-title text-center mb-4 mt-1">Reset Instructions</h4>
-            <hr>
-            <p class="text-success text-center">A password reset was requested for email {{ email }}. Follow the link below</p>
-            <a href="{% url 'password_reset_confirm' uidb64=uid token=token %}">{{ protocol }}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}</a>
-        </article>
-    </div>
-</div> 
-
-{% endblock content %}
-    
+A password reset was requested for email {{ email }}. Follow the link below
+{{ protocol }}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}
