switched back to html inputs

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -40,7 +40,7 @@
                                     </i>
                                 </span>
                             </div>
-                            {{ form.username }} 
+                            <input class="form-control" type="username" name="username" placeholder="username" id=""> 
                         </div>
                         <!--input group//-->
                     </div>
@@ -59,7 +59,7 @@
                                     </i>
                                 </span>
                             </div>
-                            {{ form.password }}
+                            <input class="form-control" type="password" name="password" placeholder="*******" id="">
                         </div>
                         <!--input group//-->
                     </div>
