--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -30,9 +30,7 @@
                                     </i>
                                 </span>
                             </div>
-
-                            {{ form.email }}
-                            
+                            <input class="form-control" name="email" type="email" placeholder="youremail@domain.com">
                         </div>
                         <!--input group//-->
                     </div>
