formatted password_reset_confirm template

--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -4,30 +4,39 @@
 {% block content %}
         
     {% if validlink %}
-        <p>Please enter (and confirm) your new password.</p>
-        <form action="" method="post">
-        {% csrf_token %}
-            <table>
-                <tr>
-                    <td>{{ form.new_password1.errors }}
-                        <label for="id_new_password1">New password:</label></td>
-                    <td>{{ form.new_password1 }}</td>
-                </tr>
-                <tr>
-                    <td>{{ form.new_password2.errors }}
-                        <label for="id_new_password2">Confirm password:</label></td>
-                    <td>{{ form.new_password2 }}</td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td><input type="submit" value="Change my password" /></td>
-                </tr>
-            </table>
-        </form>
-    {% else %}
-        <h1>Password reset failed</h1>
-        <p>The password reset link was invalid, possibly because it has already been used. Please request a new password reset.</p>
-    {% endif %}
+    <br>
+    <div class="container" role="main">
+        <div class="card justify-content-center" style="margin-left: 450px; margin-right: 450px;">
+            <article class="card-body">
+                <h4 class="card-title text-center mb-4 mt-1">Password Reset</h4>
+                <hr>
+                <p class="text-success text-center">Enter and confirm your new password</p>
+
+                <form action="" method="post">
+                {% csrf_token %}
+                    <table>
+                        <tr>
+                            <td>{{ form.new_password1.errors }}
+                                <label for="id_new_password1">New password:</label></td>
+                            <td>{{ form.new_password1 }}</td>
+                        </tr>
+                        <tr>
+                            <td>{{ form.new_password2.errors }}
+                                <label for="id_new_password2">Confirm password:</label></td>
+                            <td>{{ form.new_password2 }}</td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                    </table>
+                    <br>
+                    <button class="btn btn-primary btn-block" type="submit">Change Password</button>
+                </form>
+            {% else %}
+                <h1>Password reset failed</h1>
+                <p>The password reset link was invalid, possibly because it has already been used. Please request a new password reset.</p>
+            {% endif %}
 
 {% endblock content %}
     
